# hello_rust

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/.sqlx/: query-322eec76c9424afa9c8efc20f9bb534e79c066dffc7c1ec1e627033303115a12.json  query-43969db227e1245dd18d922a186306a530e2ef220a9e8a178908811e5ef29a93.json  query-63084dd5afa6635ed826df2bea63bf646291a4b60d044273a1d4a065569338a0.json  query-6a9f3dcb74f7343851ee3c7edc08ea64df6ce73ba9ee039406dd850e2fe22d26.json  query-ae8af540b23672acf0959e16a389e11ed2fa109aad94f31d5438e55364b6fcfb.json  query-f27a2188a39f151d25a4699af6d08bfc331d1b02cc7584be97c196c7de09e8b5.json  query-ffe5b3334a6d45b141df3df1a4afa11d7778d678a6a6c6563a9c50257a154012.json
server/migrations/: 001_create_tables.sql
server/src/: db.rs  lib.rs  main.rs
server/static/: index.html
server/tests/: integration.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/tests/: integration.rs
src/: main.rs
